# teamcode

./: .env.example  .gitignore  README.md  RUN.md  SUMMARY.md  pyproject.toml  ui.py  vision.md
.opencode/agents/: architect.md  coordinator.md  junior-engineer.md  product-manager.md  reviewer.md  tester.md
src/teamcode/: __main__.py
src/teamcode/agents/: __init__.py  base.py  registry.py
src/teamcode/agents/roles/: __init__.py  architect.py  coordinator.py  developer.py  product_manager.py  reviewer.py  tester.py
src/teamcode/cli/: main.py
src/teamcode/config/: __init__.py  manager.py  settings.py
src/teamcode/domain/: __init__.py  agent.py  context.py  message.py  task.py  task_queue.py
src/teamcode/memory/: __init__.py  base.py  conversation.py  sqlite.py  summary.py
src/teamcode/orchestrator/: __init__.py  engine.py  events.py  router.py  scheduler.py
src/teamcode/plugins/: __init__.py  base.py  registry.py
src/teamcode/prompts/: architect.md  coordinator.md  developer.md  loader.py  product_manager.md  reviewer.md  tester.md
src/teamcode/providers/: __init__.py  base.py  litellm.py  manager.py  registry.py
src/teamcode/storage/: __init__.py  base.py  sqlite.py
src/teamcode/telemetry/: __init__.py  base.py  logger.py
src/teamcode/tools/: __init__.py  base.py  registry.py
src/teamcode/ui/: __init__.py  app.py  app.tcss
src/teamcode/workspace/: __init__.py  manager.py
tests/: conftest.py
tests/unit/: test_events.py  test_provider_registry.py
tests/unit/domain/: test_agent.py  test_context.py  test_message.py  test_task.py
(+26 files in other folders)
